--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -1,36 +1,38 @@
 @import 'tailwindcss';
+@plugin "daisyui";
 
-@layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
-
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
-
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
-
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
-
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-
-    --primary: 26, 93%, 78%;
-    --primary-foreground: 238, 99%, 8%;
-
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
-
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
-
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
-
-    --ring: 222.2 84% 4.9%;
-
-    --radius: 0.5rem;
-  }
+/* custom theme */
+@plugin "daisyui/theme" {
+  name: 'elated';
+  default: true;
+  prefersdark: false;
+  color-scheme: 'light';
+  --color-base-100: oklch(98% 0.001 106.423);
+  --color-base-200: oklch(97% 0.001 106.424);
+  --color-base-300: oklch(92% 0.003 48.717);
+  --color-base-content: oklch(26% 0.007 34.298);
+  --color-primary: oklch(68.59% 0.2031 24.21);
+  --color-primary-content: oklch(100% 0 0);
+  --color-secondary: oklch(37% 0.044 257.287);
+  --color-secondary-content: oklch(98% 0.018 155.826);
+  --color-accent: oklch(87% 0.169 91.605);
+  --color-accent-content: oklch(37% 0.044 257.287);
+  --color-neutral: oklch(86% 0.022 252.894);
+  --color-neutral-content: oklch(12% 0.042 264.695);
+  --color-info: oklch(60% 0.118 184.704);
+  --color-info-content: oklch(97% 0.014 254.604);
+  --color-success: oklch(93% 0.127 124.321);
+  --color-success-content: oklch(37% 0.044 257.287);
+  --color-warning: oklch(92% 0.12 95.746);
+  --color-warning-content: oklch(37% 0.044 257.287);
+  --color-error: oklch(50% 0.213 27.518);
+  --color-error-content: oklch(97% 0.013 17.38);
+  --radius-selector: 0.25rem;
+  --radius-field: 0.25rem;
+  --radius-box: 0.5rem;
+  --size-selector: 0.1875rem;
+  --size-field: 0.1875rem;
+  --border: 1px;
+  --depth: 1;
+  --noise: 0;
 }
