Add the logic, i think.

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -52,6 +52,7 @@
   --color-lilac: #caaacd;
   --color-dutchwhite: #f1dfb6;
   --color-cosmiclatte: #fdf3dd;
+  --color-lapis: #1A659E;
 }
 
 button {
